--- a/src/lang/locales/kr.json
+++ b/src/lang/locales/kr.json
@@ -45,13 +45,13 @@
     },
     "keygen": {
       "title": "새 계정 생성",
-      "description": "After you generate an account and secret phrase, you'll need someone to send one 0L coin to that account for it to be created on chain.",
-      "btn_generate_keys": "Generate Keys",
-      "btn_generate_keys_2": "Generate Different Keys",
-      "btn_create_account": "Create This Account",
-      "account_address": "Account Address",
-      "onboard_key": "Onboarding Key",
-      "onboard_key_description": "This is also known as an Auth Key. For now you'll need it to be able to create the account on chain.",
+      "description": "계정 및 시드키 생성 후, 계정이 온체인에 생성되기 위해서는 누군가가 1 0L 코인을 계정으로 보내주어야 합니다.",
+      "btn_generate_keys": "키 생성하기",
+      "btn_generate_keys_2": "다른 키로 생성하기",
+      "btn_create_account": "이 계정으로 생성하기",
+      "account_address": "계정 주소",
+      "onboard_key": "온보딩 키",
+      "onboard_key_description": "인증 키로도 알려져 있습니다. 지금은 계정을 온체인에 등록할 때 필요합니다.",
       "securite_recovery_phrase": "SECRET RECOVERY PHRASE",
       "securite_note": "This is your secret account password (mnemonic). If you lose it no one can help you! Write it down now.",
       "account_tips": "Your account does not exist yet on chain. You'll need to give someone your Onboarding Key so that they can create your account."
